--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,55 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+
+
+// test my drag css
+.box{
+	border-radius: 5px;
+	border:grey 1px solid;
+	background:#6A6A6A;
+	// padding:10px;
+	// height:100%;
+	height:500px;
+	width:200px;
+	// float:left;
+	margin:10px;
+}
+
+.box-header{
+	// float:left;
+	text-align:center;
+	font-weight:bold;
+}
+
+.box .drag-content{
+	border-radius: 5px;
+	width:95%;
+	height:50px;
+	padding:20px;
+	margin:5px;
+	background:white;
+
+}
+
+
+
+.drag-content:hover{
+	cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
+}
+
+.ghost {
+	border:transparent !important;
+  	// opacity: 0.5 !important;
+  	background: #D6D2D2 !important;
+  	// font-size:0 !important;
+  	color:transparent !important;
+}
+
+.onDrag{
+	background:white !important;
+	opacity:100 !important;
+}
