--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -36,3 +36,12 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+
+
+// vertical tabs
+$vertical-tab-background:white; 
+$vertical-tab-border-color:lightgrey; 
+$vertical-tab-border-active-color:#c58f32; 
+
+//buttons 
+$btn-primary-color:#0D5496; 
