--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,11 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+
+@import "variables"; 
+@import "helpers";
+@import "mixins";  
+@import "profile"; 
+@import "verticalTabs"; 
+@import "buttons"; 
