display list of users and paginate

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8457,3 +8457,13 @@ button.close {
   border-color: #0D5496 !important;
 }
 
+.panel {
+  position: relative;
+  margin-bottom: 1.875rem;
+  background-color: #fff;
+  border: 0 solid transparent;
+  border-radius: .286rem;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
